# agentic-companion

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirement.txt
app/: agent.py  app.py  config.py  main.py  tools.py
