[project]
name = "agentic-companion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.6.0",
    "langchain>=1.0.3",
    "langchain-google-genai>=3.0.1",
    "langgraph>=1.0.2",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "tavily-python>=0.7.12",
]
